IE11 fix (table header cell text align left) (rendered styleguide)

--- a/styleguide/public/styles.css
+++ b/styleguide/public/styles.css
@@ -351,6 +351,7 @@ label {
 }
 
 .table__header {
+  text-align: left;
   font-weight: bold;
   border-top: solid 1px #e6e6e6;
   border-bottom: solid 1px #e6e6e6;
